--- a/main/static/main/style.css
+++ b/main/static/main/style.css
@@ -1,6 +1,17 @@
 @charset "UTF-8";
 /*-------------Миксины----------------*/
 /*--------------*/
+:root {
+  --grey: #3F3A33;
+  --green: #31443A;
+  --brown: #6A5847;
+  --brown2: #333333;
+  --white: #FCFAF2;
+  --green-transparent: #31443A99;
+  --background: #F0EEDD;
+  --black: #000000;
+}
+
 /*--------Обнуление----------*/
 * {
   padding: 0;
@@ -39,6 +50,7 @@ html, body {
   -moz-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
   scroll-behavior: smooth;
+  background: var(--background);
 }
 
 input, button, textarea {
