--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -9,11 +9,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}{% endblock %}</title>
     <link rel="stylesheet" href="{% static 'main/style.css' %}">
+    <link rel="stylesheet" href="{% static 'main/header/header.css' %}">
 </head>
 <body>
 
     <header>
+        <div class="header_wrapper container">
+            <div class="logo">
+                <img src="{% static 'main/images/logo.svg' %}" alt="">
+                <p>сверх ты</p>
+            </div>
 
+            <nav>
+                <a href="" class="link">О нас</a>
+                <a href="" class="link">Наш метод</a>
+                <a href="" class="link">Компетенции</a>
+                <a href="" class="link">Контакты</a>
+            </nav>
+
+            
+        </div>
     </header>
 
     {% block content %}{% endblock %}
