--- a/main/static/main/style.scss
+++ b/main/static/main/style.scss
@@ -106,3 +106,12 @@ img {
     -o-user-select: none;
     user-select: none;
 }
+
+@keyframes Open {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
