--- a/main/static/main/style.css
+++ b/main/static/main/style.css
@@ -1,4 +1,5 @@
 @charset "UTF-8";
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
 /*-------------Миксины----------------*/
 /*--------------*/
 :root {
@@ -46,10 +47,12 @@ html, body {
   font-weight: 400;
   line-height: 1;
   font-size: 14px;
+  font-family: "Montserrat", sans-serif;
   -ms-text-size-adjust: 100%;
   -moz-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
   scroll-behavior: smooth;
+  color: var(--green);
   background: var(--background);
 }
 
@@ -104,6 +107,12 @@ input:-webkit-autofill:focus {
   box-shadow: 0 0 0px 1000px white inset !important; /* Заливаем белым */
   -webkit-transition: background-color 5000s ease-in-out 0s;
   transition: background-color 5000s ease-in-out 0s; /* Убираем анимацию */
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+  min-height: 100dvh;
 }
 
 input::-moz-placeholder {
