--- a/main/static/main/style.scss
+++ b/main/static/main/style.scss
@@ -1,4 +1,5 @@
 @use './common';
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
 /*--------------*/
 :root {
@@ -36,12 +37,12 @@ html,body{
 	font-weight: 400;
 	line-height: 1;
 	font-size: 14px;
-    // font-family: var(--main-font);
+    font-family: "Montserrat", sans-serif;
 	-ms-text-size-adjust: 100%;
 	-moz-text-size-adjust: 100%;
 	-webkit-text-size-adjust: 100%;
 	scroll-behavior: smooth;
-    // color: var(--text-color-light);
+    color: var(--green);
     background: var(--background);
 }
 
@@ -71,6 +72,11 @@ input:-webkit-autofill:focus {
     transition: background-color 5000s ease-in-out 0s; /* Убираем анимацию */
 }
 
+body {
+    display: flex;
+    flex-direction: column;
+    min-height: 100dvh;
+}
 
 input::placeholder {
     color: var(--grey);
