--- a/main/static/main/header/header.scss
+++ b/main/static/main/header/header.scss
@@ -76,9 +76,18 @@ header {
                 }
 
                 .acordeon {
-                    height: 0px;
+                    width: 100%;
+                    position: absolute;
+                    top: 65px;
+                    left: 0;
+                    opacity: 0;
+                    padding-left: 59px;
+                    padding-bottom: 20px;
+                    border-radius: 16px;
+                    background-color: var(--white);
+                    z-index: -1;
                     overflow: hidden;
-                    transition: 0.1s;
+                    transition: 0.3s;
 
                     .acordeon_wrapper {
                         display: flex;
@@ -88,7 +97,8 @@ header {
                         padding-bottom: 10px;
                     }
                     &.active {
-                        height: 121px;
+                        opacity: 1;
+                        z-index: 10;
                     }
                 }
 
@@ -108,11 +118,28 @@ header {
                         margin-bottom: 15px;
                     }
 
+                    &.disabled {
+                        color: var(--brown2);
+                        opacity: 50%;
+                    }
+
                     // &:hover {
                     //     background-color: var(--grey);
                     // }
                 }
             }
         }
+    }
+}
+
+@keyframes hide {
+    0% {
+        opacity: 1;
+    }
+    50% {
+        opacity: 0.5;
+    }
+    100% {
+        opacity: 1;
     }
 }
