--- a/main/static/main/header/header.scss
+++ b/main/static/main/header/header.scss
@@ -13,6 +13,116 @@ header {
         align-items: center;
         gap: 20px;
 
+        @include common.mediaMaxWidth(991) {
+            display: flex;
+            justify-content: space-between;
+        }
+
+        .menu {
+            position: relative;
+            width: 44px;
+            height: 47px;
+            z-index: 20;
+
+            &::before {
+                content: "";
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 0px;
+                border-radius: 8px;
+                background-color: var(--white);
+                z-index: 1;
+                opacity: 0;
+                transition: opacity 0.3s;
+            }
+
+            &.open {
+                animation: openMenu forwards 0.8s;
+                &::before {
+                    opacity: 1;
+                    z-index: 3;
+                    animation: openBack forwards 0.8s;
+                }
+                .menu_head {
+                    .links_list_wrapper {
+                        transition: opacity 0.6s, height 0.5s 0s;
+                        opacity: 1;
+                        z-index: 4;
+                        height: 441px;
+                    }
+                }
+            }
+            &.close {
+                animation: closeMenu forwards 0.8s;
+                &::before {
+                    animation: closeBack forwards 0.8s;
+                    z-index: 1;
+                    opacity: 0;
+                }
+            }
+
+            @include common.mediaMinWidth(992) {
+                display: none;      
+            }
+
+            .burger {
+                position: relative;
+                z-index: 2;
+            }
+            .menu_head {
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 172px;
+                padding: 13px;
+                height: 47px;
+
+                .links_list_wrapper {
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    width: 172px;
+                    height: 47px;
+                    padding: 13px;
+                    z-index: 1;
+                    display: flex;
+                    flex-direction: column;
+                    opacity: 0;
+                    transition: opacity 0.6s, height 0.5s 0.5s;
+                    overflow: hidden;
+                    .close {
+                        align-self: flex-end;
+                    }
+
+                    .link_list {
+                        display: flex;
+                        flex-direction: column;
+                        gap: 20px;
+                        padding-top: 10px;
+
+                        .link {
+                            height: 17px;
+                            display: flex;
+                            align-items: center;
+                            font-size: 13px;
+                            color: var(--green);
+                        }
+
+                        .links_block {
+                            display: flex;
+                            flex-direction: column;
+                            gap: 20px;
+                            padding-left: 20px;
+                        }
+                    }
+                }
+            }
+        }
+
+
+
         .logo {
             display: flex;
             align-items: center;
@@ -41,7 +151,9 @@ header {
             width: 100%;
             max-width: 372px;
             padding: 0 20px;
-            
+            @include common.mediaMaxWidth(991) {
+                display: none;
+            }
     
             .link,
             .method_btn {
@@ -141,5 +253,50 @@ header {
     }
     100% {
         opacity: 1;
+    }
+}
+
+@keyframes openMenu {
+    0% {
+        width: 44px;
+    }
+    70% {
+        width: 177px;
+    }
+    100% {
+        width: 172px;
+    }
+}
+
+@keyframes closeMenu {
+    0% {
+        width: 172px;
+    }
+    70% {
+        width: 39px;    
+    }
+    100% {
+        width: 44px;
+    }
+}
+
+@keyframes openBack {
+    0% {
+        height: 47px;
+    }
+    70% {
+        height: 451px;
+    }
+    100% {
+        height: 441px;
+    }
+}
+
+@keyframes closeBack {
+    0% {
+        height: 441px;
+    }
+    100% {
+        height: 47px;
     }
 }
