--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -2,6 +2,10 @@
 
 {% block title %}Сверх ТЫ{% endblock %}
 
+{% block css %}
+    <link rel="stylesheet" href="{% static 'main/home/home.css' %}">
+{% endblock %}
+
 {% block content %}
 
 {% endblock %}
