--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="{% static 'main/style.css' %}">
     <link rel="stylesheet" href="{% static 'main/header/header.css' %}">
     <link rel="stylesheet" href="{% static 'main/footer/footer.css' %}">
+    {% block css %}{% endblock %}
     <script src="{% static 'main/scripts/script.js' %}" defer></script>
 </head>
 <body>
