--- a/main/static/main/style.css
+++ b/main/static/main/style.css
@@ -4,6 +4,7 @@
 /*--------------*/
 :root {
   --grey: #3F3A33;
+  --grey2: #C2BDB880;
   --green: #31443A;
   --brown: #6A5847;
   --brown2: #333333;
