--- a/main/static/main/header/header.scss
+++ b/main/static/main/header/header.scss
@@ -88,7 +88,7 @@ header {
                     left: 0;
                     width: 172px;
                     height: 47px;
-                    padding: 13px;
+                    padding: 10px;
                     z-index: 1;
                     display: flex;
                     flex-direction: column;
@@ -111,6 +111,13 @@ header {
                             align-items: center;
                             font-size: 13px;
                             color: var(--green);
+                            white-space: nowrap;
+
+                            // @include common.mediaMinWidth(992) {
+                            //     &:hover {
+                            //         background-color: var(--grey2);
+                            //     }
+                            // }
                         }
 
                         .links_block {
