--- a/main/static/main/home/home.css
+++ b/main/static/main/home/home.css
@@ -1,2 +1,204 @@
 @charset "UTF-8";
-/*-------------Миксины----------------*//*# sourceMappingURL=home.css.map */
+/*-------------Миксины----------------*/
+.scenaries {
+  margin-top: 150px;
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  grid-template-rows: 140px 187px 222px 133px;
+  grid-template-areas: "a a b b b b c c c c c c" "a a d d d d e e e e f f" "g g g h h h i i i i f f" "j j j j j j k k k k k k";
+  gap: 40px;
+}
+.scenaries > *:nth-child(1) {
+  grid-area: a;
+}
+.scenaries > *:nth-child(2) {
+  grid-area: b;
+}
+.scenaries > *:nth-child(3) {
+  grid-area: c;
+}
+.scenaries > *:nth-child(4) {
+  grid-area: d;
+}
+.scenaries > *:nth-child(5) {
+  grid-area: e;
+}
+.scenaries > *:nth-child(6) {
+  grid-area: f;
+}
+.scenaries > *:nth-child(7) {
+  grid-area: g;
+}
+.scenaries > *:nth-child(8) {
+  grid-area: h;
+}
+.scenaries > *:nth-child(9) {
+  grid-area: i;
+}
+.scenaries > *:nth-child(10) {
+  grid-area: j;
+}
+.scenaries > *:nth-child(11) {
+  grid-area: k;
+}
+.scenaries .scenaries_item {
+  position: relative;
+  border-radius: 16px;
+  font-size: 16px;
+}
+.scenaries .scenaries_item.e {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--brown);
+  color: var(--white);
+  padding: 24px 20px;
+  line-height: 130%;
+}
+.scenaries .scenaries_item.e p {
+  text-align: center;
+}
+.scenaries .scenaries_item.e span {
+  font-weight: 600;
+}
+.scenaries .scenaries_item.g {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0 20px;
+  border: 1px solid var(--brown);
+  line-height: 130%;
+}
+@media screen and (max-width: 1200px) {
+  .scenaries .scenaries_item.g {
+    line-height: 100%;
+    padding: 0 10px;
+  }
+}
+.scenaries .scenaries_item.g p {
+  font-size: 14px;
+  text-align: center;
+}
+.scenaries .scenaries_item.g p span {
+  font-weight: 700;
+}
+.scenaries .scenaries_item h4 {
+  width: -moz-min-content;
+  width: min-content;
+  font-size: 16px;
+  line-height: 130%;
+}
+.scenaries .scenaries_item .label {
+  position: absolute;
+  width: -moz-max-content;
+  width: max-content;
+  border-radius: 16px;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  padding: 12px 16px;
+  background-color: var(--white);
+}
+.scenaries .scenaries_item .description {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: var(--white);
+  transition: 0.3s;
+  transition-delay: 0s;
+  opacity: 0;
+  border-radius: 16px;
+  padding: 16px;
+  padding-bottom: 10px;
+  color: var(--green);
+  z-index: 10;
+}
+@media screen and (min-width: 992px) {
+  .scenaries .scenaries_item .description:hover {
+    transition-delay: 0.1s;
+    opacity: 1;
+  }
+}
+.scenaries .scenaries_item .description .title_block {
+  display: flex;
+  gap: 15px;
+  margin-bottom: 7.5px;
+}
+.scenaries .scenaries_item .description p {
+  font-size: 14px;
+  line-height: 130%;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
+.scenaries .scenaries_item.a .label {
+  top: 88px;
+  left: 0;
+  transition: 0.2s cubic-bezier(0.48, -1.68, 0.55, 1.9);
+}
+.scenaries .scenaries_item.a .description {
+  background-image: url("./../images/fire_back.svg");
+  background-position: left bottom;
+  background-repeat: no-repeat;
+}
+.scenaries .scenaries_item.a .description p {
+  -webkit-line-clamp: 16;
+}
+@media screen and (min-width: 992px) {
+  .scenaries .scenaries_item.a:hover .label {
+    transform: translateX(10%);
+    top: 70px;
+  }
+}
+.scenaries .scenaries_item.b .label {
+  top: 0px;
+  left: 30%;
+  transition: 0.3s cubic-bezier(0.56, -0.64, 0.42, 1.5);
+}
+.scenaries .scenaries_item.b .description {
+  background-image: url("./../images/water_back.svg");
+  background-position: right top;
+  background-repeat: no-repeat;
+}
+.scenaries .scenaries_item.b .description .title_block {
+  position: relative;
+  left: 30%;
+  transition: 0.2s cubic-bezier(0.56, -0.64, 0.42, 1.5);
+  transition-delay: 0.1s;
+}
+.scenaries .scenaries_item.b .description p {
+  -webkit-line-clamp: 4;
+}
+@media screen and (min-width: 992px) {
+  .scenaries .scenaries_item.b .description:hover .title_block {
+    left: 0;
+  }
+}
+@media screen and (min-width: 992px) {
+  .scenaries .scenaries_item.b:hover .label {
+    left: 30px;
+  }
+}
+.scenaries .scenaries_item.c .description p {
+  -webkit-line-clamp: 4;
+}
+.scenaries .scenaries_item.d .description p {
+  -webkit-line-clamp: 6;
+}
+.scenaries .scenaries_item.f .description p {
+  -webkit-line-clamp: 18;
+}
+.scenaries .scenaries_item.h .description p {
+  -webkit-line-clamp: 7;
+}
+.scenaries .scenaries_item.i .description p {
+  -webkit-line-clamp: 7;
+}
+.scenaries .scenaries_item.j .description p {
+  -webkit-line-clamp: 4;
+}
+.scenaries .scenaries_item.k .description p {
+  -webkit-line-clamp: 4;
+}/*# sourceMappingURL=home.css.map */
