--- a/main/static/main/home/home.scss
+++ b/main/static/main/home/home.scss
@@ -1,2 +1,268 @@
 @use './../common';
 
+
+.scenaries {
+    margin-top: 150px;
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    grid-template-rows: 140px 187px 222px 133px;
+    grid-template-areas: 
+        'a a b b b b c c c c c c'
+        'a a d d d d e e e e f f'
+        'g g g h h h i i i i f f'
+        'j j j j j j k k k k k k'
+    ;
+    gap: 40px;
+
+    & > *:nth-child(1) {
+        grid-area: a;
+    }
+
+    & > *:nth-child(2) {
+        grid-area: b;
+    }
+
+    & > *:nth-child(3) {
+        grid-area: c;
+    }
+
+    & > *:nth-child(4) {
+        grid-area: d;
+    }
+
+    & > *:nth-child(5) {
+        grid-area: e;
+    }
+
+    & > *:nth-child(6) {
+        grid-area: f;
+    }
+
+    & > *:nth-child(7) {
+        grid-area: g;
+    }
+
+    & > *:nth-child(8) {
+        grid-area: h;
+    }
+
+    & > *:nth-child(9) {
+        grid-area: i;
+    }
+
+    & > *:nth-child(10) {
+        grid-area: j;
+    }
+
+    & > *:nth-child(11) {
+        grid-area: k;
+    }
+
+    .scenaries_item {
+        position: relative;
+        border-radius: 16px;
+        font-size: 16px;
+
+        &.e {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            background-color: var(--brown);
+            color: var(--white);
+            padding: 24px 20px;
+            line-height: 130%;
+            p {
+                text-align: center;
+            }
+            span {
+                font-weight: 600;
+            }
+        }
+        &.g {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            padding: 0 20px;
+            border: 1px solid var(--brown);
+            line-height: 130%;
+
+            @include common.mediaMaxWidth(1200) {
+                line-height: 100%;
+                padding: 0 10px;
+            }
+
+            p {
+                font-size: 14px;
+                text-align: center;
+
+                span {
+                    font-weight: 700;
+                }
+            }
+        }
+
+        h4 {
+            width: min-content;
+            font-size: 16px;
+            line-height: 130%;
+        }
+
+        .label {
+            position: absolute;
+            width: max-content;
+            border-radius: 16px;
+            display: flex;
+            align-items: center;
+            gap: 10px;
+            padding: 12px 16px;
+            background-color: var(--white);
+        }
+
+        .description {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: var(--white);
+            transition: 0.3s;
+            transition-delay: 0s;
+            opacity: 0;
+            border-radius: 16px;
+            padding: 16px;
+            padding-bottom: 10px;
+            color: var(--green);
+            z-index: 10;
+
+            @include common.mediaMinWidth(992) {
+                &:hover {
+                    transition-delay: 0.1s;
+                    opacity: 1;
+                }
+            }
+
+            .title_block {
+                display: flex;
+                gap: 15px;
+                margin-bottom: 7.5px;
+            }
+
+            p {
+                font-size: 14px;
+                line-height: 130%;
+                display: -webkit-box;
+                -webkit-box-orient: vertical;
+                overflow: hidden;
+            }
+        }
+
+        &.a {
+            .label {
+                top: 88px;
+                left: 0;
+                transition: 0.2s cubic-bezier(.48,-1.68,.55,1.9);
+            }
+            .description {
+                background-image: url('./../images/fire_back.svg');
+                background-position: left bottom;
+                background-repeat: no-repeat;
+                p {
+                    -webkit-line-clamp: 16;
+                }
+            }
+
+            @include common.mediaMinWidth(992) {
+                &:hover {
+                    .label {
+                        transform: translateX(10%);
+                        top: 70px;
+                    }
+                }
+            }
+        }
+        &.b {
+            .label {
+                top: 0px;
+                left: 30%;
+                transition: 0.3s cubic-bezier(.56,-0.64,.42,1.5);
+            }
+            .description {
+                background-image: url('./../images/water_back.svg');
+                background-position: right top;
+                background-repeat: no-repeat;
+                .title_block {
+                    position: relative;
+                    left: 30%;
+                    transition: 0.2s cubic-bezier(.56,-0.64,.42,1.5);
+                    transition-delay: 0.1s;
+                }
+                p {
+                    -webkit-line-clamp: 4;
+                }
+                @include common.mediaMinWidth(992) {
+                    &:hover {
+                        .title_block {
+                            left: 0;
+                        }
+                    }
+                }
+            }
+            @include common.mediaMinWidth(992) {
+                &:hover {
+                    .label {
+                        left: 30px;
+                    }
+                }
+            }
+        }
+        &.c {
+            .description {
+                p {
+                    -webkit-line-clamp: 4;
+                }
+            }
+        }
+        &.d {
+            .description {
+                p {
+                    -webkit-line-clamp: 6;
+                }
+            }
+        }
+        &.f {
+            .description {
+                p {
+                    -webkit-line-clamp: 18;
+                }
+            }
+        }
+        &.h {
+            .description {
+                p {
+                    -webkit-line-clamp: 7;
+                }
+            }
+        }
+        &.i {
+            .description {
+                p {
+                    -webkit-line-clamp: 7;
+                }
+            }
+        }
+        &.j {
+            .description {
+                p {
+                    -webkit-line-clamp: 4;
+                }
+            }
+        }
+        &.k {
+            .description {
+                p {
+                    -webkit-line-clamp: 4;
+                }
+            }
+        }
+    }
+}
