--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -9,4 +9,157 @@
 
 {% block content %}
 
+    <div class="container scenaries">
+        <div class="scenaries_item a">
+            <div class="description">
+                <div class="title_block">
+                    <h4>Потеря смысла</h4>
+                    <svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <g opacity="0.6">
+                        <path d="M18.05 8.03461C18.0527 7.83487 17.9746 7.64253 17.8333 7.50128C17.6921 7.36003 17.4997 7.28189 17.3 7.28461C16.8858 7.28461 16.55 7.62039 16.55 8.03461V16.1046L7.21999 6.76461C7.03302 6.56395 6.75144 6.48136 6.4857 6.54922C6.21997 6.61709 6.01247 6.82459 5.94461 7.09032C5.87674 7.35605 5.95934 7.63764 6.15999 7.82461L15.5 17.1646H7.42999C7.01578 17.1646 6.67999 17.5004 6.67999 17.9146C6.67999 18.3288 7.01578 18.6646 7.42999 18.6646H17.31C17.7242 18.6646 18.06 18.3288 18.06 17.9146L18.05 8.03461Z" fill="#31443A"/>
+                        </g>
+                    </svg>
+                </div>
+                <p>У каждого человека бывают периоды, когда он оглядывается назад и задает себе вопрос: Что я хочу? Что я достиг на сегодняшний день? Кем я являюсь сейчас? Мое ли это желание или я действую по какому-то сценарию, правилам, нормам?</p>
+            </div>
+            
+            <div class="label">
+                <svg width="31" height="32" viewBox="0 0 31 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <g opacity="0.6">
+                    <rect x="0.5" y="0.977539" width="30" height="30" rx="15" stroke="#31443A"/>
+                    <path d="M4.01529 20.8923C6.6544 28.5448 14.3069 28.7657 14.3835 28.7673C14.6341 28.7635 14.8558 28.6046 14.9402 28.3685C15.0178 28.1273 14.9276 27.8639 14.7189 27.7206C12.5378 26.2197 11.4353 24.616 11.4426 22.9545H11.4424C11.5282 21.6475 12.0721 20.4124 12.9783 19.4664C12.7333 20.401 12.8642 21.3942 13.3432 22.2331C14.0629 23.4046 15.5636 24.007 17.5866 23.9442C18.7756 23.9038 19.6314 23.5676 20.136 22.9431C20.1932 23.2298 20.1731 23.5268 20.0783 23.8032C19.9016 24.0574 19.958 24.4056 20.206 24.5908C20.4541 24.776 20.8042 24.7312 20.9975 24.4896C21.1635 24.283 21.9039 23.083 20.2379 19.7503L20.2381 19.7505C20.0962 19.4683 19.7534 19.3538 19.4705 19.4938C19.1877 19.6339 19.0711 19.9761 19.2095 20.2598C19.352 20.5508 19.6786 21.5146 19.3221 22.1079C19.0664 22.5339 18.4695 22.7656 17.5473 22.7968C15.9682 22.852 14.8157 22.4369 14.3214 21.6319C13.7777 20.7478 13.9822 19.3449 14.8965 17.682H14.8967C15.0242 17.45 14.9766 17.1608 14.7811 16.982C14.5859 16.8032 14.2936 16.7814 14.0738 16.929C13.9202 17.0322 10.3132 19.4955 10.2946 22.9441C10.2863 24.473 10.9791 25.9245 12.3591 27.2774C10.6762 26.8568 9.12737 26.016 7.85802 24.834C6.58845 23.6518 5.63978 22.1669 5.10035 20.5181C3.8643 16.9329 6.48657 14.117 9.02248 11.393C11.0735 9.18968 13.0271 7.09126 12.7636 4.72275C13.609 5.27389 14.7362 6.57616 14.7722 9.60661C14.8119 12.9737 15.1298 14.3755 15.9885 14.963C16.7749 15.502 17.8199 15.1794 18.9113 14.7701L18.9111 14.7699C19.4144 14.5742 19.8495 14.2358 20.1631 13.7962C20.4767 13.3565 20.6551 12.8351 20.6763 12.2955C20.7542 11.1345 20.5005 9.97509 19.9442 8.95292C21.8871 10.2522 24.5131 12.8496 25.8329 17.8068C26.515 20.3699 26.292 22.4762 25.1692 24.0675C23.2801 26.7433 19.3275 27.4425 17.14 27.6213L17.1402 27.6215C16.8332 27.6463 16.6006 27.9088 16.613 28.2164C16.6251 28.524 16.8781 28.7671 17.1861 28.7673C17.2017 28.7673 17.2175 28.7667 17.2331 28.7654C19.6209 28.5704 23.9487 27.7866 26.1072 24.7294C27.4351 22.8474 27.7167 20.4192 26.9429 17.5118C24.536 8.47029 18.1087 6.72576 17.8363 6.65631C17.5627 6.58624 17.2788 6.72573 17.1668 6.98529C17.0551 7.24462 17.1485 7.54671 17.3873 7.6977C18.7989 8.74529 19.6026 10.422 19.5347 12.1787C19.534 12.5051 19.436 12.8236 19.2531 13.0938C19.0702 13.3641 18.8109 13.5734 18.5084 13.6954C17.6009 14.0353 16.9349 14.2192 16.6366 14.016C16.0363 13.6048 15.9405 11.2951 15.9203 9.59362C15.8513 3.7694 12.1518 3.21378 11.9942 3.193C11.7899 3.16587 11.587 3.25025 11.4622 3.4141C11.3375 3.57795 11.3101 3.79627 11.3905 3.98575C12.3159 6.17111 10.4005 8.22829 8.18249 10.6106C5.54448 13.4437 2.5546 16.6552 4.01536 20.8924L4.01529 20.8923Z" fill="#31443A"/>
+                    </g>
+                </svg>
+                <h4>Потеря смысла</h4>
+            </div>
+        </div>
+        <div class="scenaries_item b">
+            <div class="description">
+                <div class="title_block">
+                    <h4>Тревожность</h4>
+                    <svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <g opacity="0.6">
+                        <path d="M18.05 8.03461C18.0527 7.83487 17.9746 7.64253 17.8333 7.50128C17.6921 7.36003 17.4997 7.28189 17.3 7.28461C16.8858 7.28461 16.55 7.62039 16.55 8.03461V16.1046L7.21999 6.76461C7.03302 6.56395 6.75144 6.48136 6.4857 6.54922C6.21997 6.61709 6.01247 6.82459 5.94461 7.09032C5.87674 7.35605 5.95934 7.63764 6.15999 7.82461L15.5 17.1646H7.42999C7.01578 17.1646 6.67999 17.5004 6.67999 17.9146C6.67999 18.3288 7.01578 18.6646 7.42999 18.6646H17.31C17.7242 18.6646 18.06 18.3288 18.06 17.9146L18.05 8.03461Z" fill="#31443A"/>
+                        </g>
+                    </svg>
+                </div>
+                <p>Тревожность испытывает каждый человек на протяжении своей жизни. Тревожность может возникать в ситуациях, с которыми приходится столкнуться впервые, при выполнении новых задач.</p>
+            </div>
+
+            <div class="label">
+                <svg width="32" height="31" viewBox="0 0 32 31" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <g opacity="0.6">
+                    <rect x="1" y="0.502441" width="30" height="30" rx="15" stroke="#31443A"/>
+                    <path d="M8.83753 8.62352L10.8821 11.4371L12.9279 8.62352L14.9738 11.4371L17.0194 8.62352L19.0654 11.4367L21.1125 8.62315L23.1585 11.4367L25.2064 8.62293L26.913 10.9678L27.5955 10.4708L25.2064 7.18858L23.1587 10.0017L21.1125 7.1882L19.0656 10.0017L17.0194 7.18799L14.9738 10.0015L12.9279 7.18799L10.8825 10.0015L8.83795 7.18799L6.79149 10.0015L5.08723 7.65747L4.40454 8.15379L6.79149 11.4371L8.83753 8.62352Z" fill="#31443A"/>
+                    <path d="M8.8374 14.8128L10.882 17.6263L12.9278 14.8128L14.9736 17.6263L17.0192 14.8128L19.0653 17.6261L21.1124 14.8126L23.1584 17.6261L25.2063 14.8124L26.9129 17.157L27.5954 16.6603L25.2063 13.378L23.1586 16.1912L21.1124 13.3777L19.0655 16.1912L17.0192 13.3774L14.9736 16.191L12.9278 13.3774L10.8824 16.191L8.83783 13.3774L6.79137 16.191L5.08711 13.8469L4.40442 14.3432L6.79137 17.6263L8.8374 14.8128Z" fill="#31443A"/>
+                    <path d="M8.8374 21.0027L10.882 23.8162L12.9278 21.0027L14.9736 23.8162L17.0192 21.0027L19.0653 23.8161L21.1124 21.0025L23.1584 23.8161L25.2063 21.0023L26.9129 23.347L27.5954 22.8502L25.2063 19.5678L23.1586 22.3811L21.1124 19.5676L19.0655 22.3811L17.0192 19.5674L14.9736 22.3809L12.9278 19.5674L10.8824 22.3809L8.83783 19.5674L6.79137 22.3809L5.08711 20.0369L4.40442 20.5332L6.79137 23.8163L8.8374 21.0027Z" fill="#31443A"/>
+                    </g>
+                </svg>
+                <h4>Тревожность</h4>
+            </div>
+        </div>
+        <div class="scenaries_item c">
+            <div class="description">
+                <div class="title_block">
+                    <h4>Прокрастинация</h4>
+                    <svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <g opacity="0.6">
+                        <path d="M18.05 8.03461C18.0527 7.83487 17.9746 7.64253 17.8333 7.50128C17.6921 7.36003 17.4997 7.28189 17.3 7.28461C16.8858 7.28461 16.55 7.62039 16.55 8.03461V16.1046L7.21999 6.76461C7.03302 6.56395 6.75144 6.48136 6.4857 6.54922C6.21997 6.61709 6.01247 6.82459 5.94461 7.09032C5.87674 7.35605 5.95934 7.63764 6.15999 7.82461L15.5 17.1646H7.42999C7.01578 17.1646 6.67999 17.5004 6.67999 17.9146C6.67999 18.3288 7.01578 18.6646 7.42999 18.6646H17.31C17.7242 18.6646 18.06 18.3288 18.06 17.9146L18.05 8.03461Z" fill="#31443A"/>
+                        </g>
+                    </svg>
+                </div>
+                <p>Мое настроение часто подавлено. Меня все раздражает. У меня панические атаки, страхи и фобии. Я в состоянии отчаяния. Я склонен во всем винить себя. Мне трудно на чем-то сосредоточиться. У меня апатия. Что мне делать с прокрастинацией? Я чувствую себя выжатым как лимон, у меня нет энергии и сил.</p>
+            </div>
+        </div>
+        <div class="scenaries_item d">
+            <div class="description">
+                <div class="title_block">
+                    <h4>Отношения</h4>
+                    <svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <g opacity="0.6">
+                        <path d="M18.05 8.03461C18.0527 7.83487 17.9746 7.64253 17.8333 7.50128C17.6921 7.36003 17.4997 7.28189 17.3 7.28461C16.8858 7.28461 16.55 7.62039 16.55 8.03461V16.1046L7.21999 6.76461C7.03302 6.56395 6.75144 6.48136 6.4857 6.54922C6.21997 6.61709 6.01247 6.82459 5.94461 7.09032C5.87674 7.35605 5.95934 7.63764 6.15999 7.82461L15.5 17.1646H7.42999C7.01578 17.1646 6.67999 17.5004 6.67999 17.9146C6.67999 18.3288 7.01578 18.6646 7.42999 18.6646H17.31C17.7242 18.6646 18.06 18.3288 18.06 17.9146L18.05 8.03461Z" fill="#31443A"/>
+                        </g>
+                    </svg>
+                </div>
+                <p>Я не могу построить длительные отношения с противоположным полом. Я выбираю партнеров, у которых уже есть семья и оказываюсь в любовном треугольнике. Я столкнулся с абьюзом, буллингом. Мне трудно найти взаимопонимание с близким человеком, с ребенком. Постоянные конфликты с близкими и друзьями. Я часто меняю партнеров.</p>
+            </div>
+        </div>
+        <div class="scenaries_item e">
+            <p>
+                Мы рады приветствовать вас в нашем <span>открытом</span> и в то же время очень приватном <span>пространстве</span>, так как психотерапия это про тонкое взаимодействие двоих в поиске <span>истины</span>
+            </p>
+        </div>
+        <div class="scenaries_item f">
+            <div class="description">
+                <div class="title_block">
+                    <h4>Дипрессия</h4>
+                    <svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <g opacity="0.6">
+                        <path d="M18.05 8.03461C18.0527 7.83487 17.9746 7.64253 17.8333 7.50128C17.6921 7.36003 17.4997 7.28189 17.3 7.28461C16.8858 7.28461 16.55 7.62039 16.55 8.03461V16.1046L7.21999 6.76461C7.03302 6.56395 6.75144 6.48136 6.4857 6.54922C6.21997 6.61709 6.01247 6.82459 5.94461 7.09032C5.87674 7.35605 5.95934 7.63764 6.15999 7.82461L15.5 17.1646H7.42999C7.01578 17.1646 6.67999 17.5004 6.67999 17.9146C6.67999 18.3288 7.01578 18.6646 7.42999 18.6646H17.31C17.7242 18.6646 18.06 18.3288 18.06 17.9146L18.05 8.03461Z" fill="#31443A"/>
+                        </g>
+                    </svg>
+                </div>
+                <p>У каждого человека бывают периоды, когда он оглядывается назад и задает себе вопрос: Что я хочу? Что я достиг на сегодняшний день? Кем я являюсь сейчас? Мое ли это желание или я действую по какому-то сценарию, правилам, нормам?</p>
+            </div>
+        </div>
+        <div class="scenaries_item g">
+            <p>
+                Если вы ощущаете нечто, что заставляет вас увязать в старых сценариях, <span>ходить по кругу</span> или любой другой дискомфорт, который не позволяет получать удовольствие от жизни, мы готовы стать <span>Вашим проводником</span> для познания истинного Себя
+            </p>
+        </div>
+        <div class="scenaries_item h">
+            <div class="description">
+                <div class="title_block">
+                    <h4>Апатия</h4>
+                    <svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <g opacity="0.6">
+                        <path d="M18.05 8.03461C18.0527 7.83487 17.9746 7.64253 17.8333 7.50128C17.6921 7.36003 17.4997 7.28189 17.3 7.28461C16.8858 7.28461 16.55 7.62039 16.55 8.03461V16.1046L7.21999 6.76461C7.03302 6.56395 6.75144 6.48136 6.4857 6.54922C6.21997 6.61709 6.01247 6.82459 5.94461 7.09032C5.87674 7.35605 5.95934 7.63764 6.15999 7.82461L15.5 17.1646H7.42999C7.01578 17.1646 6.67999 17.5004 6.67999 17.9146C6.67999 18.3288 7.01578 18.6646 7.42999 18.6646H17.31C17.7242 18.6646 18.06 18.3288 18.06 17.9146L18.05 8.03461Z" fill="#31443A"/>
+                        </g>
+                    </svg>
+                </div>
+                <p>Мое настроение часто подавлено. Меня все раздражает. У меня панические атаки, страхи и фобии. Я в состоянии отчаяния. Я склонен во всем винить себя. Мне трудно на чем-то сосредоточиться. У меня апатия. Что мне делать с прокрастинацией? Я чувствую себя выжатым как лимон, у меня нет энергии и сил.</p>
+            </div>
+        </div>
+        <div class="scenaries_item i">
+            <div class="description">
+                <div class="title_block">
+                    <h4>Зависимости</h4>
+                    <svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <g opacity="0.6">
+                        <path d="M18.05 8.03461C18.0527 7.83487 17.9746 7.64253 17.8333 7.50128C17.6921 7.36003 17.4997 7.28189 17.3 7.28461C16.8858 7.28461 16.55 7.62039 16.55 8.03461V16.1046L7.21999 6.76461C7.03302 6.56395 6.75144 6.48136 6.4857 6.54922C6.21997 6.61709 6.01247 6.82459 5.94461 7.09032C5.87674 7.35605 5.95934 7.63764 6.15999 7.82461L15.5 17.1646H7.42999C7.01578 17.1646 6.67999 17.5004 6.67999 17.9146C6.67999 18.3288 7.01578 18.6646 7.42999 18.6646H17.31C17.7242 18.6646 18.06 18.3288 18.06 17.9146L18.05 8.03461Z" fill="#31443A"/>
+                        </g>
+                    </svg>
+                </div>
+                <p>Человек может чувствовать себя зависимым от многих вещей или людей, которые оказывают влияние на настроение, благополучие и жизнь в целом. Чувство зависимости – непростое переживание.
+                    Зависимости могут проявляться по-разному. Например, в виде импульсивного желания потратить большие суммы денег, что-то купить, что не планировал. </p>
+            </div>
+        </div>
+        <div class="scenaries_item j">
+            <div class="description">
+                <div class="title_block">
+                    <h4>Cамооценка</h4>
+                    <svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <g opacity="0.6">
+                        <path d="M18.05 8.03461C18.0527 7.83487 17.9746 7.64253 17.8333 7.50128C17.6921 7.36003 17.4997 7.28189 17.3 7.28461C16.8858 7.28461 16.55 7.62039 16.55 8.03461V16.1046L7.21999 6.76461C7.03302 6.56395 6.75144 6.48136 6.4857 6.54922C6.21997 6.61709 6.01247 6.82459 5.94461 7.09032C5.87674 7.35605 5.95934 7.63764 6.15999 7.82461L15.5 17.1646H7.42999C7.01578 17.1646 6.67999 17.5004 6.67999 17.9146C6.67999 18.3288 7.01578 18.6646 7.42999 18.6646H17.31C17.7242 18.6646 18.06 18.3288 18.06 17.9146L18.05 8.03461Z" fill="#31443A"/>
+                        </g>
+                    </svg>
+                </div>
+                <p>Я чувствую, что со мной что-то не так. Я неуверенный в себе человек. Что бы и как бы я ни сделал, я себя постоянно критикую. Я часто испытываю вину и стыд за что-либо, чувствую себя «плохим». Я не могу принять важное для себя решение. Меня не устраивает моя жизнь, работа, отношения.</p>
+            </div>
+        </div>
+        <div class="scenaries_item k">
+            <div class="description">
+                <div class="title_block">
+                    <h4>Сепарация</h4>
+                    <svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <g opacity="0.6">
+                        <path d="M18.05 8.03461C18.0527 7.83487 17.9746 7.64253 17.8333 7.50128C17.6921 7.36003 17.4997 7.28189 17.3 7.28461C16.8858 7.28461 16.55 7.62039 16.55 8.03461V16.1046L7.21999 6.76461C7.03302 6.56395 6.75144 6.48136 6.4857 6.54922C6.21997 6.61709 6.01247 6.82459 5.94461 7.09032C5.87674 7.35605 5.95934 7.63764 6.15999 7.82461L15.5 17.1646H7.42999C7.01578 17.1646 6.67999 17.5004 6.67999 17.9146C6.67999 18.3288 7.01578 18.6646 7.42999 18.6646H17.31C17.7242 18.6646 18.06 18.3288 18.06 17.9146L18.05 8.03461Z" fill="#31443A"/>
+                        </g>
+                    </svg>
+                </div>
+                <p>Мне трудно начать жить самостоятельно. Меня все время контролирует мама. Я не могу построить свою личную жизнь. Что бы я ни сделал, я жду одобрения родителей.</p>
+            </div>
+        </div>
+    </div>
+
 {% endblock %}
