--- a/main/static/main/home/home.css
+++ b/main/static/main/home/home.css
@@ -1,2 +1,244 @@
 @charset "UTF-8";
-/*-------------Миксины----------------*//*# sourceMappingURL=home.css.map */
+/*-------------Миксины----------------*/
+.container.hidden_text {
+  width: 100%;
+  position: relative;
+  margin-top: 200px;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  padding: 40px 0;
+}
+@media screen and (max-width: 992px) {
+  .container.hidden_text {
+    margin-top: 120px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .container.hidden_text {
+    margin-top: 130px;
+  }
+}
+.container.hidden_text::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  -webkit-backdrop-filter: blur(20px);
+          backdrop-filter: blur(20px);
+  z-index: 10;
+  opacity: 0;
+  animation: shim 14s forwards infinite;
+}
+.container.hidden_text .focus_state {
+  position: relative;
+  height: 70px;
+  width: 100%;
+  margin-right: 128px;
+}
+@media screen and (max-width: 768px) {
+  .container.hidden_text .focus_state {
+    margin-right: 30px;
+  }
+}
+.container.hidden_text h2 {
+  position: absolute;
+  top: 50%;
+  right: 0;
+  transform: translate(0, -50%);
+  font-family: var(--anticva);
+  text-transform: uppercase;
+  display: flex;
+  align-items: center;
+  color: var(--green);
+}
+@media (max-width: 768px) {
+  .container.hidden_text h2 {
+    font-size: calc(24.45px + 36.635 * (100vw - 390px) / 1920);
+  }
+}
+@media (min-width: 768px) {
+  .container.hidden_text h2 {
+    font-size: calc(24.45px + 21.55 * 0.0520833333vw);
+  }
+}
+.container.hidden_text h2.one {
+  animation: hide 14s forwards infinite;
+}
+.container.hidden_text h2.two {
+  opacity: 0;
+  animation: show 14s forwards infinite;
+}
+@media (max-width: 768px) {
+  .container.hidden_text h2 img.romb {
+    height: calc(50px + 34 * (100vw - 390px) / 1920);
+  }
+}
+@media (min-width: 768px) {
+  .container.hidden_text h2 img.romb {
+    height: calc(50px + 20 * 0.0520833333vw);
+  }
+}
+.container.hidden_text h2 span {
+  z-index: 1;
+}
+.container.hidden_text h2 .man {
+  position: absolute;
+  top: 50%;
+  left: 6px;
+  transform: translate(-50%, -50%);
+  z-index: 0;
+  height: 124px;
+}
+@media (max-width: 768px) {
+  .container.hidden_text h2 .man {
+    height: calc(90px + 57.8 * (100vw - 390px) / 1920);
+  }
+}
+@media (min-width: 768px) {
+  .container.hidden_text h2 .man {
+    height: calc(90px + 34 * 0.0520833333vw);
+  }
+}
+
+.slider_container {
+  position: relative;
+  width: 100%;
+}
+@media (max-width: 768px) {
+  .slider_container {
+    margin-top: calc(40px + 51 * (100vw - 390px) / 1920);
+  }
+}
+@media (min-width: 768px) {
+  .slider_container {
+    margin-top: calc(40px + 30 * 0.0520833333vw);
+  }
+}
+.slider_container:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  height: 100%;
+  width: 130px;
+  background: linear-gradient(90deg, transparent 0%, var(--background) 70%);
+  z-index: 10;
+}
+.slider_container:after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 130px;
+  background: linear-gradient(90deg, var(--background) 30%, transparent 100%);
+  z-index: 10;
+}
+@media screen and (max-width: 768px) {
+  .slider_container::after, .slider_container::before {
+    display: none;
+  }
+}
+.slider_container .splide {
+  width: 100%;
+  max-width: 1361px;
+  margin: 0 auto;
+}
+.slider_container .splide .splide__track {
+  padding: 0 100px !important;
+}
+@media screen and (max-width: 768px) {
+  .slider_container .splide .splide__track {
+    padding: 0 16px !important;
+  }
+}
+.slider_container .splide .splide__slide {
+  position: relative;
+  overflow: hidden;
+  border-radius: 16px;
+}
+.slider_container .splide .splide__slide img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+@keyframes shim {
+  0% {
+    opacity: 1;
+  }
+  10% {
+    opacity: 0;
+  }
+  35% {
+    opacity: 0;
+  }
+  40% {
+    opacity: 1;
+  }
+  45% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0;
+  }
+  75% {
+    opacity: 0;
+  }
+  88% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+@keyframes hide {
+  0% {
+    opacity: 1;
+  }
+  40% {
+    opacity: 1;
+  }
+  48% {
+    opacity: 0;
+  }
+  80% {
+    opacity: 0;
+  }
+  82% {
+    opacity: 0;
+  }
+  90% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+@keyframes show {
+  0% {
+    opacity: 0;
+  }
+  40% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+  80% {
+    opacity: 1;
+  }
+  90% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 0;
+  }
+}/*# sourceMappingURL=home.css.map */
