--- a/main/static/main/style.css
+++ b/main/static/main/style.css
@@ -1,6 +1,12 @@
 @charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
 /*-------------Миксины----------------*/
+@font-face {
+  font-family: "Anticva";
+  font-weight: 400;
+  src: url("./fonts/Anticva.woff"), url("./fonts/Anticva.woff2");
+}
 /*--------------*/
 :root {
   --grey: #3F3A33;
@@ -9,8 +15,10 @@
   --brown2: #333333;
   --white: #FCFAF2;
   --green-transparent: #31443A99;
-  --background: #F0EEDD;
+  --background: #f0eedd;
   --black: #000000;
+  --lora: "Lora", serif;
+  --anticva: "Anticva";
 }
 
 /*--------Обнуление----------*/
