--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -11,8 +11,11 @@
     <link rel="stylesheet" href="{% static 'main/style.css' %}">
     <link rel="stylesheet" href="{% static 'main/header/header.css' %}">
     <link rel="stylesheet" href="{% static 'main/footer/footer.css' %}">
+    <link rel="stylesheet" href="{% static 'main/splide/splide.min.css' %}">
     {% block css %}{% endblock %}
     <script src="{% static 'main/scripts/script.js' %}" defer></script>
+    <script src="{% static 'main/scripts/splide.min.js' %}" defer></script>
+    <script src="{% static 'main/scripts/splide.js' %}" defer></script>
 </head>
 <body>
 
