--- a/main/static/main/home/home.scss
+++ b/main/static/main/home/home.scss
@@ -1,2 +1,223 @@
 @use './../common';
 
+
+.container.hidden_text {
+    width: 100%;
+    position: relative;
+    margin-top: 200px;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    padding: 40px 0;
+
+    @include common.mediaMaxWidth(992) {
+        margin-top: 120px;
+    }
+
+    @include common.mediaMaxWidth(768) {
+        margin-top: 130px;
+    }
+
+    &::before {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        height: 100%;
+        width: 100%;
+        backdrop-filter: blur(20px);
+        z-index: 10;
+        opacity: 0;
+        animation: shim 14s forwards infinite;
+    }
+
+    .focus_state {
+        position: relative;
+        height: 70px;
+        width: 100%;
+        margin-right: 128px;
+
+        @include common.mediaMaxWidth(768) {
+            margin-right: 30px;
+        }
+    }
+
+    & h2 {
+        position: absolute;
+        top: 50%;
+        right: 0;
+        transform: translate(0, -50%);
+        font-family: var(--anticva);
+        text-transform: uppercase;
+        display: flex;
+        align-items: center;
+        color: var(--green);
+        @include common.adaptiveFont(46, 24.45);
+
+        &.one {
+            animation: hide 14s forwards infinite;
+        }
+
+        &.two {
+            opacity: 0;
+            animation: show 14s forwards infinite;
+        }
+
+        & img.romb {
+            @include common.adaptiveProperty(height, 70, 50);
+        }
+
+        & span {
+            z-index: 1;
+        }
+
+        .man {
+            position: absolute;
+            top: 50%;
+            left: 6px;
+            transform: translate(-50%, -50%);
+            z-index: 0;
+            height: 124px;
+            @include common.adaptiveProperty(height, 124, 90);
+
+        }
+    }
+}
+
+.slider_container {
+    position: relative;
+    width: 100%;
+    @include common.adaptiveProperty(margin-top, 70, 40);
+
+    &:before {
+        content: '';
+        position: absolute;
+        top: 0;
+        right: 0;
+        height: 100%;
+        width: 130px;
+        background: linear-gradient(90deg, transparent 0%, var(--background) 70%);
+        z-index: 10;
+    }
+
+    &:after {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        height: 100%;
+        width: 130px;
+        background: linear-gradient(90deg, var(--background) 30%, transparent 100%);
+        z-index: 10;
+    }
+    
+    @include common.mediaMaxWidth(768) {
+        &::after, &::before {
+            display: none;
+        }
+    }
+
+    .splide {
+        width: 100%;
+        max-width: 1361px;
+        margin: 0 auto;
+
+        .splide__track {
+            padding: 0 100px !important;
+
+            @include common.mediaMaxWidth(768) {
+                padding: 0 16px !important;
+            }
+        }
+        .splide__slide {
+            position: relative;
+            overflow: hidden;
+            border-radius: 16px;
+
+            img {
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+            }
+        }
+    }
+}
+
+@keyframes shim {
+    0% {
+        opacity: 1;
+    } 
+    10% {
+        opacity: 0;
+    }
+    35% {
+        opacity: 0;
+    } 
+    40% {
+        opacity: 1;
+    }
+    45% {
+        opacity: 1;
+    }
+    50% {
+        opacity: 0;
+    }
+    75% {
+        opacity: 0;
+    }
+    88% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+@keyframes hide {
+    0% {
+        opacity: 1;
+    }
+    40% {
+        opacity: 1;
+    }
+    48% {
+        opacity: 0;
+    }
+    80% {
+        opacity: 0;
+    }
+    82% {
+        opacity: 0;
+    }
+    90% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+@keyframes show {
+    0% {
+        opacity: 0;
+    }
+    40% {
+        opacity: 0;
+    }
+    50% {
+        opacity: 1;
+    }
+    80% {
+        opacity: 1;
+    }
+    90% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 0;
+    }
+}
+
