--- a/main/static/main/home/home.scss
+++ b/main/static/main/home/home.scss
@@ -316,30 +316,150 @@
             }
         }
         &.h {
+            .label {
+                top: 0px;
+                left: 40%;
+                transition: 0.3s cubic-bezier(.56,-0.64,.42,1.5);
+            }
             .description {
+                background-image: url('./../images/water_back.svg');
+                background-position: right bottom;
+                background-repeat: no-repeat;
+                .title_block {
+                    position: relative;
+                    top: -10px;
+                    left: 30%;
+                    transition: 0.2s cubic-bezier(.56,-0.64,.42,1.5);
+                    transition-delay: 0s;
+                }
                 p {
                     -webkit-line-clamp: 7;
+                }
+                @include common.mediaMinWidth(992) {
+                    &:hover {
+                        .title_block {
+                            transition-delay: 0.1s;
+                            top: 2px;
+                            left: 0;
+                        }
+                    }
+                }
+            }
+            @include common.mediaMinWidth(992) {
+                &:hover {
+                    .label {
+                        left: 30px;
+                    }
                 }
             }
         }
         &.i {
+            .label {
+                top: 50%;
+                left: 30%;
+                transition: 0.3s cubic-bezier(.56,-0.64,.42,1.5);
+                transform: translateY(-50%);
+            }
             .description {
+                background-image: url('./../images/air_back.svg');
+                background-position: right bottom;
+                background-repeat: no-repeat;
+                .title_block {
+                    position: relative;
+                    top: 20%;
+                    left: 20%;
+                    transition: 0.2s cubic-bezier(.56,-0.64,.42,1.5);
+                    transition-delay: 0s;
+                }
                 p {
                     -webkit-line-clamp: 7;
+                }
+                @include common.mediaMinWidth(992) {
+                    &:hover {
+                        .title_block {
+                            transition-delay: 0.1s;
+                            top: 0;
+                            left: 0;
+                        }
+                    }
+                }
+            }
+            @include common.mediaMinWidth(992) {
+                &:hover {
+                    .label {
+                        top: 30%;
+                        left: 10%;
+                    }
                 }
             }
         }
         &.j {
+            .label {
+                top: 0px;
+                left: 20%;
+                transition: 0.3s cubic-bezier(.56,-0.64,.42,1.5);
+            }
             .description {
+                background-image: url('./../images/water_back.svg');
+                background-position: right bottom;
+                background-repeat: no-repeat;
+                .title_block {
+                    position: relative;
+                    left: 20%;
+                    transition: 0.2s cubic-bezier(.56,-0.64,.42,1.5);
+                    transition-delay: 0.1s;
+                }
                 p {
                     -webkit-line-clamp: 4;
+                }
+                @include common.mediaMinWidth(992) {
+                    &:hover {
+                        .title_block {
+                            left: 0;
+                        }
+                    }
+                }
+            }
+            @include common.mediaMinWidth(992) {
+                &:hover {
+                    .label {
+                        left: 30px;
+                    }
                 }
             }
         }
         &.k {
+            .label {
+                top: 0px;
+                left: 40%;
+                transition: 0.3s cubic-bezier(.56,-0.64,.42,1.5);
+            }
             .description {
+                background-image: url('./../images/fire_back2.svg');
+                background-position: right bottom;
+                background-repeat: no-repeat;
+                .title_block {
+                    position: relative;
+                    left: 40%;
+                    transition: 0.2s cubic-bezier(.56,-0.64,.42,1.5);
+                    transition-delay: 0.1s;
+                }
                 p {
                     -webkit-line-clamp: 4;
+                }
+                @include common.mediaMinWidth(992) {
+                    &:hover {
+                        .title_block {
+                            left: 0;
+                        }
+                    }
+                }
+            }
+            @include common.mediaMinWidth(992) {
+                &:hover {
+                    .label {
+                        left: 30px;
+                    }
                 }
             }
         }
