--- a/main/static/main/home/home.css
+++ b/main/static/main/home/home.css
@@ -151,6 +151,7 @@
 }
 .scenaries .scenaries_item.a .description p {
   -webkit-line-clamp: 16;
+  line-clamp: 16;
 }
 @media screen and (min-width: 992px) {
   .scenaries .scenaries_item.a:hover .label {
@@ -176,6 +177,7 @@
 }
 .scenaries .scenaries_item.b .description p {
   -webkit-line-clamp: 4;
+  line-clamp: 4;
 }
 @media screen and (min-width: 992px) {
   .scenaries .scenaries_item.b .description:hover .title_block {
@@ -207,6 +209,7 @@
 }
 .scenaries .scenaries_item.c .description p {
   -webkit-line-clamp: 4;
+  line-clamp: 4;
 }
 @media screen and (min-width: 992px) {
   .scenaries .scenaries_item.c .description:hover .title_block {
@@ -232,6 +235,7 @@
 }
 .scenaries .scenaries_item.d .description p {
   -webkit-line-clamp: 6;
+  line-clamp: 6;
 }
 .scenaries .scenaries_item.f .label {
   top: 50%;
@@ -252,6 +256,7 @@
 }
 .scenaries .scenaries_item.f .description p {
   -webkit-line-clamp: 18;
+  line-clamp: 18;
 }
 @media screen and (min-width: 992px) {
   .scenaries .scenaries_item.f .description:hover .title_block {
@@ -282,6 +287,7 @@
 }
 .scenaries .scenaries_item.h .description p {
   -webkit-line-clamp: 7;
+  line-clamp: 7;
 }
 @media screen and (min-width: 992px) {
   .scenaries .scenaries_item.h .description:hover .title_block {
@@ -315,6 +321,7 @@
 }
 .scenaries .scenaries_item.i .description p {
   -webkit-line-clamp: 7;
+  line-clamp: 7;
 }
 @media screen and (min-width: 992px) {
   .scenaries .scenaries_item.i .description:hover .title_block {
@@ -347,6 +354,7 @@
 }
 .scenaries .scenaries_item.j .description p {
   -webkit-line-clamp: 4;
+  line-clamp: 4;
 }
 @media screen and (min-width: 992px) {
   .scenaries .scenaries_item.j .description:hover .title_block {
@@ -376,6 +384,7 @@
 }
 .scenaries .scenaries_item.k .description p {
   -webkit-line-clamp: 4;
+  line-clamp: 4;
 }
 @media screen and (min-width: 992px) {
   .scenaries .scenaries_item.k .description:hover .title_block {
