--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -9,7 +9,7 @@
 
 {% block content %}
 
-    <div class="container scenaries">
+    <!-- <div class="container scenaries">
         <div class="scenaries_item a">
             <div class="description">
                 <div class="title_block">
@@ -297,6 +297,6 @@
                 <h4>Сепарация</h4>
             </div>
         </div>
-    </div>
+    </div> -->
 
 {% endblock %}
