--- a/main/static/main/header/header.scss
+++ b/main/static/main/header/header.scss
@@ -19,7 +19,7 @@ header {
         }
 
         .menu {
-            position: fixed;
+            position: absolute;
             top: 50px;
             right: 16px;
             width: 44px;
